@@ -41,7 +41,10 @@ Features:
 - WC: Use country, city and postal code of Acumulus invoice (instead of Customer
   object) to get lookup tax rates. (this also makes
   WooCommerce\Creator::getVatRateLookupMetadataByTaxClass() work in WC2...)
+
+Refactorings:
 - WC: Remove properties $order and $refund from Creator class.
+- WC: Only call WC method WC_Tax::get_tax_class_slugs() once in getVatClasses().
 
 5.5.0 (2018-11-14)
 ------------------
